--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,7 @@
 /**** general ****/
-body, html {
+
+body,
+html {
   font-family: Georgia, 'Times New Roman', Times, serif;
   padding: 0;
   margin: 0;
@@ -9,15 +11,13 @@ body, html {
   background-size: cover;
   background-attachment: fixed;
 }
+
 .container {
   max-width: 820px;
-  }
-
-  .container-fluid {
-    max-width: 1200px;
-  }
+}
 
 /**** header section ****/
+
 h1 {
   margin: 40px;
   font-family: 'Courgette', cursive;
@@ -35,6 +35,7 @@ h1 {
 }
 
 /**** posts section ****/
+
 .new-city {
   -webkit-box-shadow: 0px 3px 12px 0px rgba(155, 155, 163, 1);
   -moz-box-shadow: 0px 3px 12px 0px rgba(155, 155, 163, 1);
@@ -46,29 +47,40 @@ h1 {
 }
 
 /*trash*/
+
 .remove-item {
   color: red;
   font-size: 20px;
   margin-left: 20px;
 }
 
+.remove-item:hover {
+  color: rgba(255, 0, 0, 0.7);
+  cursor: pointer;
+}
+
 /*pin*/
+
 .pin-item {
   color: #000;
 }
+.pin-item:hover {
+  color: rgba(0, 0, 0, 0.7);
+  cursor: pointer;
+}
 
 .pinned .pin-item {
-  -ms-transform: rotate(45deg); /* IE 9 */
-  -webkit-transform: rotate(45deg); /* Safari 3-8 */
+  -ms-transform: rotate(45deg);
+  /* IE 9 */
+  -webkit-transform: rotate(45deg);
+  /* Safari 3-8 */
   transform: rotate(45deg);
   color: rgb(31, 194, 172);
 }
 
-.remove-item:hover {
-  color: rgba(255, 0, 0, 0.7);
-}
 
 /*header of each post*/
+
 .header-post {
   display: flex;
   justify-content: space-between;
@@ -76,6 +88,7 @@ h1 {
 }
 
 /*temp and time of each post*/
+
 .data-api {
   margin: 0 0 20px 30px;
 }
@@ -85,6 +98,7 @@ h1 {
 }
 
 /*comments of each post*/
+
 .post-form {
   margin-top: 20px;
 }
@@ -94,7 +108,8 @@ h1 {
   line-height: 24px;
 }
 
-.invalid-city, .invalid-comment {
+.invalid-city,
+.invalid-comment {
   color: red;
   /* display: none; */
 }
@@ -102,4 +117,3 @@ h1 {
 .fa-comment {
   margin-right: 10px;
 }
-
