--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,9 @@
 /**** general ****/
 
+* {
+  box-sizing: border-box;
+}
+
 body,
 html {
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -64,6 +68,7 @@ h1 {
 .pin-item {
   color: #000;
 }
+
 .pin-item:hover {
   color: rgba(0, 0, 0, 0.7);
   cursor: pointer;
@@ -77,7 +82,6 @@ h1 {
   transform: rotate(45deg);
   color: rgb(31, 194, 172);
 }
-
 
 /*header of each post*/
 
@@ -111,9 +115,46 @@ h1 {
 .invalid-city,
 .invalid-comment {
   color: red;
-  /* display: none; */
 }
 
 .fa-comment {
   margin-right: 10px;
+}
+
+/*autocomplete*/
+
+.autocomplete {
+  position: relative;
+}
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+  border-radius: 5px;
+}
+
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
+  border-radius: 5px;
+}
+
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
+}
+
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: DodgerBlue !important;
+  color: #ffffff;
 }
