--- a/public/style.css
+++ b/public/style.css
@@ -32,13 +32,20 @@ h1 {
   margin-top: 20px;
 }
 
-.col-md-9 {
+.col-md-9,
+.col-md-3 {
   display: flex;
 }
 
 #ajax-loader {
   display: none;
   text-align: center;
+}
+
+.sort-icon {
+  color:#007bff;
+  font-size: 25px;
+  margin-left: 3px;
 }
 
 /**** posts section ****/
@@ -100,11 +107,16 @@ h1 {
   margin: 0 0 20px 30px;
 }
 
-.temp {
+.temp, .numComment {
   font-weight: bold;
 }
 
 /*comments of each post*/
+
+.totalComments {
+  font-family: 'Courgette', cursive;
+  text-align: right;
+}
 
 .post-form {
   margin-top: 20px;
@@ -113,6 +125,14 @@ h1 {
 .comment {
   margin-bottom: 5px;
   line-height: 24px;
+}
+
+.comments {
+  display: table; /*to make the comment width as the text*/
+}
+
+.current-weather .comment {
+  cursor: url('red-x.png') 5 5 ,crosshair;
 }
 
 .invalid-city,
