--- a/public/style.css
+++ b/public/style.css
@@ -107,6 +107,10 @@ h1 {
   margin: 0 0 20px 30px;
 }
 
+.current-weather .data-api {
+  margin-bottom: 0;
+}
+
 .temp, .numComment {
   font-weight: bold;
 }
