--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@ html {
   margin: 0;
   width: 100%;
   min-height: 100%;
-  background: url('background-weather.jpg')no-repeat;
+  background: url('img/background-weather.jpg')no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
@@ -109,6 +109,8 @@ h1 {
 
 .current-weather .data-api {
   margin-bottom: 0;
+  color: #f05663
+
 }
 
 .temp, .numComment {
@@ -136,7 +138,7 @@ h1 {
 }
 
 .current-weather .comment {
-  cursor: url('red-x.png') 5 5 ,crosshair;
+  cursor: url('img/red-x.png') 5 5 ,crosshair;
 }
 
 .invalid-city,
