--- a/public/style.css
+++ b/public/style.css
@@ -28,7 +28,7 @@ h1 {
   font-size: 50px;
 }
 
-.search-city {
+.search-city-form {
   margin-top: 20px;
 }
 
@@ -40,17 +40,19 @@ h1 {
 #ajax-loader {
   display: none;
   text-align: center;
+  margin: 20px;
 }
 
-.sort-icon {
-  color:#007bff;
+.search-city-form .sort-icon {
+  /* color:#007bff; */
+  color:rgb(31, 194, 172);
   font-size: 25px;
   margin-left: 3px;
 }
 
 /**** posts section ****/
 
-.new-city {
+.city-post {
   -webkit-box-shadow: 0px 3px 12px 0px rgba(155, 155, 163, 1);
   -moz-box-shadow: 0px 3px 12px 0px rgba(155, 155, 163, 1);
   box-shadow: 0px 3px 12px 0px rgba(155, 155, 163, 1);
@@ -62,24 +64,24 @@ h1 {
 
 /*trash*/
 
-.remove-item {
+.header-post .remove-item {
   color: red;
   font-size: 20px;
   margin-left: 20px;
 }
 
-.remove-item:hover {
+.header-post .remove-item:hover {
   color: rgba(255, 0, 0, 0.7);
   cursor: pointer;
 }
 
 /*pin*/
 
-.pin-item {
+.header-post .pin-item {
   color: #000;
 }
 
-.pin-item:hover {
+.header-post .pin-item:hover {
   color: rgba(0, 0, 0, 0.7);
   cursor: pointer;
 }
@@ -109,11 +111,11 @@ h1 {
 
 .current-weather .data-api {
   margin-bottom: 0;
-  color: #f05663
+  color: #800000;
 
 }
 
-.temp, .numComment {
+.data-api .temp, .numComment {
   font-weight: bold;
 }
 
@@ -124,13 +126,14 @@ h1 {
   text-align: right;
 }
 
-.post-form {
+.comment-form {
   margin-top: 20px;
 }
 
 .comment {
   margin-bottom: 5px;
   line-height: 24px;
+  font-family: calibri, sans-serif;
 }
 
 .comments {
@@ -146,7 +149,7 @@ h1 {
   color: red;
 }
 
-.fa-comment {
+.comment .fa-comment {
   margin-right: 10px;
 }
 
